# Model2Mobile

./: .gitignore  Model2Mobile_SPEC.md  README.md  pyproject.toml
examples/: example_run.sh
ios_benchmark/: Package.swift
ios_benchmark/BenchmarkRunner/: BenchmarkRunner.swift
model2mobile/: __init__.py  __main__.py  cli.py  config.py  models.py  pipeline.py
model2mobile/benchmark/: __init__.py  device.py  runner.py
model2mobile/codegen/: __init__.py  swift_generator.py
model2mobile/convert/: __init__.py  converter.py
model2mobile/convert/recipes/: __init__.py  base.py  channel_last_fix.py  coremltools_compat.py  custom_activations.py  deformable_conv.py  detection_unwrap.py  dfine_export.py  dinov2_deformable_attn.py  dynamic_to_static.py  group_norm_patch.py  nms_strip.py  registry.py  silu_replace.py  transformer_attention.py  yolo_detect_head.py
model2mobile/diagnose/: __init__.py  analyzer.py
model2mobile/optimize/: __init__.py  optimizer.py
model2mobile/report/: __init__.py  comparison.py  html.py  json_report.py  markdown.py  optimization.py
model2mobile/suggest/: __init__.py  advisor.py
model2mobile/validate/: __init__.py  task_classify.py  task_depth.py  task_detect.py  task_segment.py  validator.py
